--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -16,8 +16,10 @@ dependencies = [
 
 [dependency-groups]
 scripts = [
-    "google-cloud-bigquery>=3.30.0",
-    "sqlalchemy>=2.0.39",
+    "playwright>=1.50.0",
+    "polars>=1.25.2",
+    "psycopg[binary]>=3.2.6", 
+    "sqlalchemy[asyncio]>=2.0.39",
 ]
 dev = [
     "aiosqlite>=0.21.0",
