--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       database:
         condition: service_healthy
     environment:
-      DATABASE_URL: postgresql+psycopg://${DB_USER:?}:{$DB_PASSWORD:?}@database:${DB_PORT:-5432}/${DB_NAME-?}
+      DATABASE_URL: postgresql+psycopg://${DB_USER:?}:${DB_PASSWORD:?}@database:${DB_PORT:-5432}/${DB_NAME-?}
     ports:
       - 8000:8000
   database:
